# Conformal-BFS

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
docs/: README.md
results/: ffs_results_20251010_112407.json  ffs_results_20251010_112407.pkl  ffs_results_20251010_140956.json  ffs_results_20251010_140956.pkl  ffs_results_20251018_124735.json  ffs_results_20251018_124735.pkl  ffs_results_20251018_131554.json  ffs_results_20251018_131554.pkl  ffs_results_20251018_154351.json  ffs_results_20251018_154351.pkl  ffs_results_20251018_171013.json  ffs_results_20251018_171013.pkl  ffs_results_20251020_154414.json  ffs_results_20251020_154414.pkl
src/cbfs/: _MrmrMS.py  _conformal_module.py  _crfe.py  _utils.py  _utils_MrmrMS.py  _utils_crfe.py  ffs.py
workflow/baselines/RFE/: LassoElasticnet.py  floating-paper-baseline.py
workflow/baselines/RFE/crfe_lib/: __init__.py  crfe.py  linear_svm.py  rfe.py
workflow/notebooks/: analysis_imvigor.ipynb
workflow/scripts/: imvigor210.py
workflow/test/: test_modules.py
